// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavMenu Is hidden 1`] = `
.c0 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  list-style-type: none;
  margin: 0;
  overflow-y: auto;
  padding: 0;
  position: absolute;
  width: 100%;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  line-height: 2rem;
  overflow: hidden;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:focus {
  box-shadow: inset 0 0 0 3px #00629666,inset 0 0 0 1px #006296;
  outline: none;
}

.c1:hover {
  background-color: #DBDEE1;
}

<ul
  class="c0"
  data-testid="menu-list"
  hidden=""
>
  <li>
    <a
      class="c1"
      data-testid="listitem-optionA"
      href="/testA"
    >
      <span
        class="c2"
      >
        Option A
      </span>
    </a>
  </li>
  <li>
    <a
      class="c1"
      data-testid="listitem-optionB"
      href="/testB"
    >
      <span
        class="c2"
      >
        Option B
      </span>
    </a>
  </li>
  <li>
    <a
      class="c1"
      data-testid="listitem-optionC"
      href="/testC"
    >
      <span
        class="c2"
      >
        Option C
      </span>
    </a>
  </li>
  <li>
    <a
      class="c1"
      data-testid="listitem-optionD"
      href="/testD"
    >
      <span
        class="c2"
      >
        Option D
      </span>
    </a>
  </li>
</ul>
`;

exports[`NavMenu Matches the snapshot 1`] = `
.c0 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  list-style-type: none;
  margin: 0;
  overflow-y: auto;
  padding: 0;
  position: absolute;
  width: 100%;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  line-height: 2rem;
  overflow: hidden;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:focus {
  box-shadow: inset 0 0 0 3px #00629666,inset 0 0 0 1px #006296;
  outline: none;
}

.c1:hover {
  background-color: #DBDEE1;
}

<ul
  class="c0"
  data-testid="menu-list"
>
  <li>
    <a
      class="c1"
      data-testid="listitem-optionA"
      href="/testA"
    >
      <span
        class="c2"
      >
        Option A
      </span>
    </a>
  </li>
  <li>
    <a
      class="c1"
      data-testid="listitem-optionB"
      href="/testB"
    >
      <span
        class="c2"
      >
        Option B
      </span>
    </a>
  </li>
  <li>
    <a
      class="c1"
      data-testid="listitem-optionC"
      href="/testC"
    >
      <span
        class="c2"
      >
        Option C
      </span>
    </a>
  </li>
  <li>
    <a
      class="c1"
      data-testid="listitem-optionD"
      href="/testD"
    >
      <span
        class="c2"
      >
        Option D
      </span>
    </a>
  </li>
</ul>
`;
